# yuno-solver

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: matrix.h  solve.h
input/: 1.txt  2.txt
src/: solve.cpp  yuno-solver.cpp
